--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Take a shot of.",
+  "name": "Who's shot is it?",
   "version": "1.0",
-  "description": "You must take a shot of....",
+  "description": "An Alexa skill to tell you and your friends whose turn it is to take a shot",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,7 +9,7 @@
   "keywords": [
     "alexa"
   ],
-  "author": "Joe Rulea",
+  "author": "Joseph Mckenzie",
   "license": "Apache-2.0",
   "dependencies": {
     "alexa-sdk": "^1.0.9"
